# stl2lnas

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflow/: check_format.yml
.github/workflows/: check_format.yml  rust_build.yml  testing.yml
examples/: convert_cube.yaml  convert_cube_no_norm.yaml  convert_cube_plane.yaml  convert_cylinder.yaml  convert_folder.yaml  convert_plane.yaml  convert_sphere.yaml  convert_terrain.yaml
examples/stl/: cylinder.stl  plane.stl
fixture/: convert_cube.yaml  terrain.stl
src/: cfg.rs  common.rs  lagrangian_node.rs  lagrangian_save.rs  lib.rs  main.rs  stl2lagrangian.rs  stl_divider.rs  stl_indexed.rs  stl_reader.rs  stl_triangle.rs  utils.rs
src/lagrangian/: format.rs  join.rs  save.rs  triangle.rs  vertice.rs
src/stl/: reader.rs  surfaces.rs  triangle.rs
