[package]
name = "stl2lnas"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2"
base64 = "0.13.0"

[[bin]]
name="convert_lnas_folder"
test=false
bench=false