[package]
name = "stl2lnas"
authors = ["Waine Oliveira Jr <waine@aerosim.io>"]
default-run = "stl2lnas"
version = "0.5.0"
description = "Convert STL to LNAS files"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.10", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
